# email-senderr

./: Cargo.toml  README.md
src/: Settings.toml  app.rs  config.rs  email.rs  main.rs  template.rs
