[package]
name = "email-senderr"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11", features = ["builder", "smtp-transport", "native-tls", "hostname"] }
config = "0.15"
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
uuid = { version = "1", features = ["v4"] }
